[gd_scene load_steps=30 format=2]

[ext_resource path="res://Julian Folder/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Abdullah Folder/Tiles and Art/CharacterSprite.png" type="Texture" id=2]
[ext_resource path="res://Julian Folder/Audio/SFX.tscn" type="PackedScene" id=3]
[ext_resource path="res://Abdullah Folder/SFX/swing.wav" type="AudioStream" id=4]
[ext_resource path="res://Abdullah Folder/SFX/left.wav" type="AudioStream" id=5]
[ext_resource path="res://Abdullah Folder/SFX/right.wav" type="AudioStream" id=6]
[ext_resource path="res://Abdullah Folder/Tiles and Art/CharacterDead.png" type="Texture" id=7]
[ext_resource path="res://Julian Folder/Sprites/smooth_light.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 4.5 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("aliveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("deadSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("aliveSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("SFX/AttackSound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("aliveSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("deadSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("SFX/DyingSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("aliveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("aliveSprite:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("aliveSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("deadSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("SFX/HealSound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("aliveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("deadSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("aliveSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("aliveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("aliveSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("deadSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("SFX/WalkingL")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/4/type = "value"
tracks/4/path = NodePath("SFX/WalkingL:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SFX/WalkingR:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Heal"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/Attack/node = SubResource( 8 )
states/Attack/position = Vector2( 425, 213 )
states/Dead/node = SubResource( 9 )
states/Dead/position = Vector2( 591, 120 )
states/Heal/node = SubResource( 10 )
states/Heal/position = Vector2( 591, 319 )
states/Idle/node = SubResource( 11 )
states/Idle/position = Vector2( 591, 213 )
states/Walking/node = SubResource( 12 )
states/Walking/position = Vector2( 780, 213 )
transitions = [ "Idle", "Attack", SubResource( 13 ), "Idle", "Walking", SubResource( 14 ), "Idle", "Heal", SubResource( 15 ), "Heal", "Idle", SubResource( 16 ), "Attack", "Idle", SubResource( 17 ), "Walking", "Idle", SubResource( 18 ), "Idle", "Dead", SubResource( 19 ) ]
start_node = "Idle"
end_node = "Dead"
graph_offset = Vector2( -78, 76 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )
max_health = 3
hp_recovered_on_heal = 1
heal_range = {
"maxi": 40,
"mini": 30
}

[node name="aliveSprite" type="Sprite" parent="."]
position = Vector2( -6, -9.5 )
texture = ExtResource( 2 )
centered = false
vframes = 3
hframes = 8
frame = 16
region_rect = Rect2( 0, 0, 128, 40 )

[node name="deadSprite" type="Sprite" parent="."]
visible = false
rotation = 3.14159
texture = ExtResource( 7 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 17, 17 )

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="HealTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="AttackRange" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -5 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Dead = SubResource( 4 )
anims/Heal = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Walking = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="SFX" parent="." instance=ExtResource( 3 )]

[node name="Swing" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 4 )
volume_db = 5.0
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="SFX"]
